--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 ENGINE_PORT=5000
 UI_PORT=8080
 
-# URL the UI will use at build-time to call the engine (default: docker service name)
-ENGINE_URL=http://engine:5000
+# URL the browser will use to call the engine
+ENGINE_URL=http://localhost:5000
